[package]
name = "blogger2zola"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"
description = "A tool for converting Blogger-exported XML into Zola-compatible Markdown."
repository = "https://github.com/lukehsiao/blogger2zola"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["zola", "blogger"]

[badges]
# Maintenance: `status` is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "passively-maintained" }

[dependencies]
anyhow = "1.0.31"
atom_syndication = "0.9.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
select = "0.4.3"
slug = "0.1.4"
structopt = "0.3.14"
ureq = "1.1.1"
thiserror = "1.0.19"

[profile.release]
debug = false
